added new button icons and tooltips

--- a/Map.resx
+++ b/Map.resx
@@ -117,4 +117,130 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="treeButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFQAAACBCAYAAABemJ1dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAC7VJREFUeF7tnW2MFVcZx/mg0WhSGxsVo202qFSlJUBdK1LKtgWCklVoA9LS4la2
+        oUC7RQr2xaAYUEs10khtavpCKgbRRElpG5pmG2gtaolkTSCCH7attCmpkiBavvDlyn/Ncz3z3P/MnJk5
+        b9vsh19I/nvvzDn/Oc85z3mZy7hWqzWGQ6iYEkOvHJ3y3V3bNuJf9vfUoGIq9G27Z/u4hZ9ugZ4Ny/ax
+        z6QGFVMALVLMBOff2H2KfS41qJgC25//XZ9pKHj1rTe62GdTgoopsOaxH2zVhu7+0+AC9tmUoGIKoM/U
+        hsJk9tmUoGIKaDPBaBiYqBgbPSCZ6M+mBhVjs/WpJ9YwM8G+wy/3sO+kAhVjs+C+1buZmQBJPvtOKlAx
+        Nl0rrnmVmQlS70epGBPdf36gf1rGUKC/kxJUjInuP694fEHroruuyBiacj9KxZjo/hOGAlNLOR+lYkww
+        ZzfNg5nfOLQyY+iUtQuG2HdTgIqxQCibxgEYevc/7m69d+mlGT3VeT0VY8Hm72LoxO9dldGxeMKuERsq
+        xgKhbJoGen557Yih85+8IaOjr2XXiA0VY4AQNg0T5j61eMTQb752Z8ffTr397/PZtWJCxRjkTTfnDF43
+        Yij4yMDlmb+lGPZUjAEL93d97bOtL734vxYKZv9qUebv2CJh14oJFUOD0DWNEs5bNbU1/Zkvtw1deXQg
+        8/cUt0WoGBq23QE+uuHyEUPXnVjfNlWHfWqr+FQMTd7q0icfmDli6K3Dt7cN1bOm1MKeiiHJC3cw+Rez
+        Rwy9/i83tw1lYZ/SaE/FkOSFOwYkmAl6/7CkbShIebSnYkjYZhz44JrL2oZeda6bNA3Vo31KST4VQ5GX
+        zIOuLTPahoI1r69tG6rDHqQyt6diKIr2jqT/FPr+uiLTSvXcHtdi9wgNFUORt9XxnmWXZMwEC19emjFU
+        z+1xLXaP0FAxBEVbxZJ/muh+FOglvRRW8qkYAvNknebih2Z1GApue+2OjKHdD87PfC+FnJSKvkHeqFfm
+        BTNd0tx4uD9jKBucYuekVPRNXu4JPnRXNzUTzNn3/5UnQW/gxd63p6JvivbdJz16NTVTMNMncN1zX898
+        P/bgREWfsH0jgY3uGh32QO/dx5w5UdEneTMjcOGm6dREEzbap5RCUdEXRa0TTPv1XGqixlx9AtgeSSWF
+        oqIvilIlc+5ehk7ygV7Wi3UGioo+KJq3g7LBSGMuOgPWSmMsPlPRB0VHFGWrowrmGqmgW2mMvpSKrinr
+        O2VlvgpscGKtNPSIT0XXFI3sNqlSHnoFCui10tAr+lR0SdGsCNRpnQJrpUDnpSFP61HRFWgZRbOiOn2n
+        hrVSPXsCod4VpaIr2OEvk6ojO2Pms70dIz7Qc/xQRyCp6IKygahK3lkGG/GxEqUHqBALJ1RsSlmoY4nO
+        dlZki140AXqAAr5Dn4pNKZoRAZs5e1XMM1AmessZD9rnqE/FJpSN6u/vn0wNcYFt6PvcdqZiXRBOeSvx
+        gouBqAi9TQL0ahTwlUpRsQ4IozIzfYS6BqM+608vvX9uR3l8zKKoWBWYyc53ajAY6f12H2CrhC2e6P4U
+        uDaVilWwNdMELbV79zxqhitgqg5/NtcHLk2loi11zBTQWmGs6/TJBOHf/7dVGVPxzhMz1dVRHiraUpYe
+        2YIkH3N6X+YipTKNveGl/o4yuMpPqWhL0RpnXbD6hK1kGNy0v8UJFEQCu4+JywMSVLSlSchXAYsoMBkn
+        8pB22bRkmMmuZYKsxPV0lIpVQadetObpA+mD9bFHYcaOr9LvATQCnNbzcQSSik1AX4SFEaBbL1oXQDjD
+        jDLk80KVPvb6g8szJuKBh1jCo6IL0B2YFQKs4r7AVrOZd4baX6KiC7DjaJoJWMV9AUP16bxR3UJZSsUq
+        7gsYqt+zD7EVQsWmINzZvB79IKu8D+R0ibm/hDKx8rqEik3JW8KLYajeq/exIGJCxabk5aY+p5ka2bzT
+        h3JRNlZmV1CxCej4zQqYsIr7wlxsDvmrOlRsQtH8nlXcF4v+vKxtqF5gdjnV1FCxLkUHwpqcEKmD3mPS
+        K0y+XhSjYl0wLzYLbeLiUEMVsHRnGhrqLWYq1iEvVRLYu0e+ifE6IxXrUNQ6QZMzTHXRi8t6X8lHK6Vi
+        VcpaJwixl6QxByYQopVSsSplrRNLbazCvmGn83QK5froOBWrgCdc1jqLXubyjd5SZtsfLvNSKlahKO8U
+        YvSfAnuvSb8a7nL2REVbimZFJr63jItgrzOyvtTVHJ+Ktthse8QMd8HmJAm6LQyurJ5VoKINeStKmpAr
+        THno0R6wQw8u1kupWIZNmgRCTzfzyDvlrGdPoOkARcUyyo56CzEHIw076gj0Cw5NBygqFoEnaBYgj1i5
+        Zx55rZSlUU326qmYB0K96Ki3CbaBWcViktdKdRoF6m7oUTEP21BPpe/U5J0dZQNU3dCnIsM21EFKfadG
+        /+ybwN5tqhP6VNRUCfXQ65510KtQgovQp6LGNtRBjFWlqlQJ/apvjVDRhJ0AySPFgSgPdmwcsNCvkvBT
+        UbBN4IHP12V8kfdukz7CA2x/zICKgu0RReScoyHUGfi5DZsXHNCwbBajqQjKFo1NUlgAaQILf3YW3yaV
+        omKVFElA/xlzma4pGKj06F/nhbEOoUq/qUHoY3dztIY/0C846FSqbMukQ6jTOhny8oGci2eFTxVEGn4h
+        8lObezr60rLBiYroK8yLuAKZABJ/dA9idOzWjPujHCgTGgDKyMoObFb1qQgwKNUN/bqI4QBdByopYDqL
+        itcBD0+uI9dH98TKwECY266TUlFAf4qngveRQpsbG8yQsAFpa6RAxTwwr8XrKBjp8NTeKSajLmg0iEr0
+        kU0OP1CxKniKAAUCKNz4+Z9oAVaBkKAMExZPOyWGiWkob5U5ui1UdEHfFy5oCfd8ZWLr56uvbG1dObN1
+        5y3Tc+lddlkpi/s+R78r4D4/u3VG+97gvlW9wX5YkIouMCu04drPjFQ0JOb9R72hRw+91GNW6IdLp9JK
+        +8S8/zvO0B+dC1VWaZ/0z/hw+/6rZk8I9h9ZUbEpux/ZstE0lFXYNwNzLmrfH5z5z7+C/KAgFZvy6Kbb
+        tktFVlw5nlbYN+vPje6moYdeeCbIj7NSsSnfuWnWkFQEFWMV9s3GRZMyhu7c+m3vryUCKjbFrMjmJZNp
+        hX3z03MplFmOdQunjs63kRFaZkVQMVbhEKC7Mcvy+6d3en0tEVCxCWb/ufrqj9GKhgL5r2koWqnvwYmK
+        dUFhkaJIBWKFu4AZk5k+Ad99KRXrYqZLqAirZGh0KwU+Q5+Kdfjnm3/vSql1Cmil6HpMQ4EvU6low9mz
+        Z9998uTJC44fP37hsWPHLjZTJSTVrHKx+MnNn+8IfTB87PDk06dPn8fqVxcqMmAejDt48GD34ODgNXv2
+        7OkVNt2+5EkpJEZWtApWsZgwUx/bdv+9UocDBw588ciRI5PQQM6cOfM+5oENVBROnDgxHgbu3bt3nmmg
+        xiwkCo3Cs0rFZu28rnY5B3qnvsLqIuzfv38WDK5qLhXxlHQrLMI0VMAMKcYqEwPlMOf2t/R8/O0djzw4
+        wOrCQOu1NbZDwFNhFy1iy/rlO00zNagMRlsMVFh58tklYCKBe+B+aJE6zFfOnfhWFTMFRKmNqR1CWXjn
+        sW3ztx7AkzcLXwZGX5gNsKoPE6qA78j39ayIgb7+t7/ZtYSV3waMIdovTYeAL7GL2YDCwth7b5r9R1ah
+        GKCvRATt2vH4clZmW2q3UIDBqEofmgdCCwajQusWTT+MyrFKuwLXx31wv4d/vPH7TU0UhoaGpiBNZF5p
+        qCggR0Of6sJcE7RkpCwCDKgKDJPvNwnjPDAQDQ8PT7A1UqAiA80doz8Mxs1YIUYraDCoE7o75Nus/rZQ
+        0RaYLAk/QKFSNVtMQ16NsqJxoOxVW2AZVHSFGA7QL4vxAvomeQh1QcSY10SYyj0BK5dPqDhGfag4Rn2o
+        OEZ9qDhGXVrj/gusw/Fli7ZR7gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="exportButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAKXSURBVHhe7ZqxahRRFIZXEQxGMSionSYBbQRjp0IasUqK
+        FEljYV7BQlMJgilEsTEQ9BVUMHkCCy3UIpWmkSQ2QiLEwgSFQNT1O3NPEnQny+zunLmT3fPBV2R25v6H
+        Q/beOztTcRzHcRzHcRzHyUK1Wu3CYbyNDwy9i+N4SqPjQiGHcRLXsUh+4yye01KKh/A+nMeY/MQxLak4
+        CD2GC1JBCZD/hmEtrRgIfJ5El4dv2KPl2ULQAP6R1JIxqSXaQpDMxmVkUUu0haA3IS+VFXyM/y9fefgQ
+        32E9TmqZdhBSb/Ib0dNMYHzZb9Rbcgf0VDsI+RKyUrmsp5lBRtR8bwAhsRvwIUSlYr8zJCR2A6ZDVA3L
+        uF9Ps4OQ2A04jktJ2g4bWLMb5Jhs17v0z3xgwLjfQSDnCN7BlyjL7nn9aBuO9aNskz/joB5uHQaL3oAs
+        SC2hpATZuU7hQf24eRhkLzZgC7l7vainNAcDmDaAMa7gU3zRoq8wDZkvJrC5CZMLzRrA9ddQvrdF8BrP
+        aHR2uMiyATKpFcl37NP4bHBBOzVgDUvVgKv4KxnJHvkK9Gp0drjIehKU2fsJpk1sjbj3JsE8kVpCSf9Q
+        /mUwL6SWUFJCe22EyDmA1/ER3sSaByUck/uATWyvrTAZh/BtkraD/Cp8SU/ZhmOnsb1uhsi4H6Jq+IT7
+        9DQ7CIndgLkQlUrjy1qjEBK7AXHnIEI6vgEd/7O4bCF34yvKepv2YKNV5cHIe6zHCS3TDkJ2m4Vjs6Al
+        2kLQBezch6MCYc9CZmlYxaNanj2ElekFCbl9HtLSioPQXvwoFUTkB45qScVDeDfewxgvSc3gWS0lLhQi
+        6/MQ3sK0JSwv5TW5G2j/HoDjOI7jOI7jOB1GpfIXqnBVPQnrfaoAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="landButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJwAAACUCAYAAABm60AgAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAA9lJREFUeF7t3clOFFEUh/H7FNI8jSuGpnFpdGFMjK9g3CkOCI4r9QFEVGaabvZi
+        nCDBWWlmfJPjPQXtQu4CwuVPmXyLXwicru7Nl3urqishbO/8tub8vJ152AkcO4KDFMFBiuAgRXCQCq8X
+        3tizkZHkEMgtvH333p6PjiaHQG7hw8dFe/HyZXII5BYWl5bs1dhYcgjkFpaXP9n4+ERyCOQWPn/5YhOT
+        k8khkFv4+u27TU1NJ4dAbuH7j582PT2THAK5hV8rLZuZrSeHQG6h1Vq1en0uOQRyC63VNavPERw0wtr6
+        hs01GskhkFtY39i0RqOZHAK5hY3NLWs0CQ4aBAepsLm1bc0mz8NBg+AgRXCQClvbOzxiDhmCgxTBQYrg
+        IEVwkCI4SBEcpAgOUgQHKYKDFMFBqng8iSd+oUJwkCI4SBEcpAgOUgQHKYKDFMFBiuAgRXCQIjhIERyk
+        CA5SBAcpgoMUwUGK4CBFcJAiOEgRHKQIDlIEBymCgxTBQYrg/icPOq3f3d9zr9Nqkf/8+7coeWxJFMHx
+        v7ZKqh3XvYrV7kbDFesbqlj1Tseu2x3WG1UH937fU7w28uM80OR7nxCCK6sYikdTvVOx3lsd1j1wyrqu
+        HVz3QIwxHlcdigH6CliS8AiuhIrQ2pFd3x/TocTj/X164kroW2/q85QIrmQ8tmJFO2po/4rv1xPftxa3
+        2dTnqhBcmcRtrzpYKbbDZDRHFaPzLfokLywIrkxicMeyurV5cPECo//+ya1yBFcyfXGF6znkBcJB+blc
+        X7yI8LBTn61AcCXjtzKO6xzOb6FwDod9/BzL77flCM+P94uFvuGTPXdrI7iSKr5R8G8SYih+3uWrU8/N
+        GOCNyC8qPMR/eFw+99cV9+Di9uyh+arGfTgcmK9MfvPWb5l4QLvfNuznfy8Ci69zxYpWktDaCA5SBAep
+        sLa+QXCQIThIERykCA5SBAcpgoMUwUGK4CBFcJAiOEgRHKQIDlIEBymCgxTBQYrgIEVwkCI4SBEcpAgO
+        UgQHKYKDFMFBiuAgRXCQIjhIhdbqms3W68khkBvBQYrgIEVwkCI4SBEcpAgOUgQHKYKDFMFBiuAgRXCQ
+        IjhIERykCA5SBAcpgoMUwUGK4CBFcJAiOEgRHKQIDlIEBymCgxTBQSqstFZtZnY2OQRyIzhIERykCA5S
+        BAcpgoMUwUGK4CBFcJAiOEgRHKQIDlIEBymCgxTBQYrgIEVwkNoL7mlyCOQWVhae2OXzF5JDILfw6GLN
+        zl5lhYNGONdVsyuPOYeDRjgdgzvLlgqRGNwluz3CCgcNtlQIddofVYmUY21Ut3MAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="waterButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACoAAAApCAYAAABDV7v1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAABZdJREFUWEeNl+liHDcMg/eR29hOnGdL2xxt0uOltvgwgsKROTP7A9mVxAMEKa1z
+        u73+c799+DHw/X57P/BR+x//vd9evt1vv/4ufFrw2/329GXze/1bPn9t9nx/h73Or4DPq/z5js/T5y0f
+        MR2rcPM/awA7/jEIj+QEraAo9glsYiL//LWQlX8XN3hWkdg+rXaKgy9n5Mm+Nxx0qFQd+LRiqmwlGkJW
+        u/iFAB1BoXoWUBjn7lZzDiyEbCLCTPjy59bK2raoFuMKq/efSMumJuAMgiQBzyJDXEP7gLhg57cg3UEo
+        CpoLglqJsQ4q8RXvVRz2KOwi1Rns+U6BqMZnSGfuKRAiLrqJC9KZcLNzyJCIABxidDVnzBd2tUiTEjmU
+        dFyBz2CqLZt1bCoo3jasZXf7kEVAW0c1RzMW1BZCIu2yWottxQt2qHoyo5CEbNaezWoAaN0VUeamdgPk
+        tl61FYUyEtXfkB97xK4F71gHEDwjmpajfN13Au37Np8RFay+VM3Nz9il5XOOh/1GaEkYoibSJHRbmlsb
+        JdylC6IgdyHqpt0QnIqPe+LAbNYW1BuH07xUSs5NX+0ntEfwrktvoFgeHwRZcoCMX+6Ajdh4GcFRI8lS
+        MUi1nK0dqLDdxRsZOJ5ydGcALhmBTSU5hAzk6mzW2bEN7ejUHOAVuXrMA2yJ250FEcskIAhzNjtjQwVZ
+        /XIBOhDjNM7AnOeDi8c5ZwhDTpOEAMH5fvYIA1Q4UpVOuGidzwd/sQkyn4xJtaODGT84cV+IuRmoojge
+        PUmBLxqq5mYrySxUwWll/uqCMJdvXhT8Rwfd9mGHH/k9syPG5DFGcwaYT5ICda2oqKRIClYFeWs5hyxx
+        /SsmPwg6R+yUl32Kt7qlqAD7nxtKkuTVqENUJflVBzxr3F6RdRc6G5Gb59286ny3QWLU8RqHA2U9Q7G7
+        gmLkXe7UCjwOUrY7Az8XCjgHXKrynXYiO+8mypEIEJTzGugQxH2gMI/JUTGKsdvIzHkG9WloHIBnbcwb
+        uGp5hWdT3erOAv8SaZxQvzufX1AIQmtFzNiEztLGR3998CPuVQew8yux3hHtszfVI3m9jWdImx5RleIe
+        slV7zYWiNCp5JdxN+W9zKLBw1XJoAxWQFPtLVRUrHTDRk9iIBCl++yEJWfb4NFE70x5m88F2gqmqiKBa
+        B8iRGLu0dVWWdbq6m094CcTZiI4D1PGMivQ0PsH8/xJAiQacExcy/vNw7EGK7kGcPXfyJC/2c4HMBFkr
+        PoLtlQT7VUnAvomKYHwQAdXoHGcz38lIAF+mLBKYmahGR6DKSqKDnyXhzZmIRZjLcRu2cyMzBzjYGVck
+        idREudZmIK09GicKnX/gNOcAX4rxIsOMqnxOsktL/IcGwSnoimhRze3tbARyQ5aC5mWjMPkTHz4mOtsz
+        qnYFlaz2uNkYJ1ies7atBRmnsw6ZiOKg6rxs5GGtM/Jht/2fZWlNKrGTPgGBqoLc1EfaRowjG5+L1Oye
+        1oiSMQxJcDjMu8u1FBLgC1mCd+cginVnybEbDVqufKhaf3Y31sssgvyinM2hlVdAQPDOhnc0z9gsmHwC
+        RDrfdKLek02xhigFoMa6v8IFSdXaGRKRBCU9OiJDYgizx/zlPe3URoBJdOxt8jZESVBn5AwUS2DUy6Xz
+        BVFsd0TEUZTEEcDEhZboGIn6k7pjHcyKTmZvRV6KSa6xqYKgep662mLQze5GZlEURwyP5u4N5O+WSq1f
+        mu4cgfgZC7pBXor0OCX/iOdWkcDzApQwzo8oWpWhpfwodHYdIOURG3mJ4TiFfLhthkoEmDVa59tIK3VJ
+        MG5bKYI8/J5H2eDjRFq7ZQ8oCzl8s6bo+o76//6DmxcOukJOTj6qs9KyndA+n/UNheCj3UjsTgQIcwZh
+        c/l0/x/sOMWxM7Z0aQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
