fixed coasts at the map border, added dragging while painting

--- a/Map.resx
+++ b/Map.resx
@@ -124,10 +124,109 @@
         +I8GvgTLQ1mYAJvccDAAJEgJHg3EQWEASJASPBqI//8DAJE0nMrIbAdFAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="coastButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHQAAABxCAYAAAAEV4eUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAFchJREFUeF7tnXl0XNV9x92NLumSntOV0tISSnpOQpq0tEnantOWtqenzQlQSCCl
+        bUggCyE4eJVsjDG2MWBbsmzLtmRb1sxoX2xZSJZtyZIs74u8L3jDJqQ0OZQEQigkYcmvv+9Pc4c7d34j
+        vTfz5r2xzB/fg2d037uP7+f9fnd5992Z8Omy3yVbE6s/Se2dpXRhZ3NkOjfUSAc2LaenE6XUsubBvNTU
+        OI/qhgYo9uyPqPY5oi/3vUTXlp+kCTMPvKsZ+2hCyR6aMH0XTZi2gyZMGaAJk/uj1ZRBmlDK1zRz/7vX
+        iGubun1E04ZYO9NVwtfvAi2t+Qfq6npUNTosnR1qoD2d5dQZn65C8iMX6H1bX6RrFh5LB2qrdC+bEzFU
+        1I1rmJGEKdfFcLWytnATuEDnxD5FWzbNV40OS8ECfZzqdu6kWgN087fpmieHR+54c/e7MlA108IQInAG
+        X0Pqmvg6EX1aWVfjHmjLIkoMn6bai2++C3QBmzTNmJYFKtJvFFGKKEPd9rUgOgFZK+/KBfpU/WdocMsi
+        1eiwdHZ7PQ22L6ANtVNUSH7U1FpG8aPPMtC3LKAMEbBgkt1O2UIET+d2KUyoqGs6Ui2yh30dyBYer8MF
+        uqrlXtq/bYVqdFg6w0D7WubS+nWTVUh+1NRWTvFjl1JA7+78Fr3/ESt9ASrSmW2ibWbJ7iRYjhzbuEII
+        9aRSLdIs1y3tuY+6XaANGybRye0x1eiwBKC9zXMKAvT2tufoZ6c5Bk1NpjkNKoTOCXqV9jGFkGQLq86p
+        XKffDOEC7ex6RDU5TJ3ZXkdbGmdTe80kFZIfuUBvbbmoG2HarmxQEcUArx0bhHBudMZMfQCaS7ovRqDP
+        DCYCaT8hz0AhacOQ9jSoSIEMtRBtKs6J9GoPU3AN7wHNlC+gEEyUdpUNTgMKk9lwtHFIjYGARV2cVhGZ
+        Bqa023lkg/eAZhHazKw9YP4ul/bNVcaNw+fFZ69DFE3jHWhj+1KKnfoO1V562x9QwMoKFcbz92YqDu0v
+        ymeTen7TZlvnRl35dr7GPdCOVclpv5/4A2oEYNkiFakSEQUwgJtNKeiW0FbbnSAoiHHvuAe6sVpAGvkG
+        CgGAa37g4hsGaVyr348MyFvKr6a7l91Am7ofU00OU4UFeslbFAAiogsRKDCVCA1aQQK9rfwa+uqqP6fe
+        ngWqyWGqoEDbvzUCSR45ISWyiZISk5DxX3w2KdFu41Li7/A3W+idpgnH+bwJggR6x5JrZWJ+x9Zy1eQw
+        VVCg619g89hoYzxgSDuYBIx5U3zG34zRUo7bUXwvSraZACA3BY7j49PEZVLlFWk3Co5BZtBAeZUBeufS
+        6yi+/kE61F+tmhymCg/UMVIVoCfBB2G0K0B1Ixj1SV15dIwM0M8tvZ42PD2Tjg3WqCaHqaIAishFWg4a
+        pJE8VeE61Hr5b9oxXmSA/seyD9LevuV0bkejanKYKijQtm+ymQwKKdROq67yjZSxhBsFqTujneXPiN5c
+        6wZMdIi+vPJjdGRgjWpw2CooUOnlspno+Jj2T8aZtqksQNcMC1JSd5YozbWDZNLto7F/LYp0CxUWqDIO
+        BTzX1DCA4sZCPW6mQFuaa5QC6H0r/pRq2x+gU9vjqsFh64oBCgGaQFU6SLm03wB6/6qbZOnmM0N1qsFh
+        64oCCgGqpF4LKoCiWfC69MQIQB+s/gRt7XmczuyoVw0OW1ccUEBDj9pNvXgA4DdKAXTq2r+VDlEx9HDP
+        72yiUwOxKwwoC+DcDpJpSyVSlWM0fabiD2lu/NOquVHoigUKZZ1s4Gvx1EHiMvdUfoiWNf2Xam5UuvJS
+        blKoUxsbI/Vmi1KAFiWHYu8BZRULUECRKHWuxaRetzyWqeDhAiYokK5RDi8nYemmZmxUKiTQuzY8T++b
+        6QzaJTKcVBcFUAhRhlkq+1ogXB+g2UI0i3DtyeuftPpvqHXjdNXYqFRIoPd0v0C/9RinMNtEzNhk9DAL
+        PPU3mjBLBGD29XgR/h+uNKCpVyFsA1WgmKnxOWQISqhXmgEna6SJ/4ZrlmjlGxTXi2PGPdCOqtQCscsG
+        KITU6zYD+CwCSIaI1Ixrt5d8jnug6yspduYVhvrO5QUU6d4Gin/jmgQgw87WHIx3oE1tSyh+/HmqvTgS
+        pQ9se5FuKDuUboK0WXzH20DxOYglIbnKBYrUihtMQI7Stn+t6i9kYl4zNioFCzR9ofWUHd+jj1UeTzcB
+        dzzGemlA2UBEg10uNDEwN+XiBlPLOvriihtpRfMXVGOjUiGBlux6mT5edSrdhGIDiiiUZiAHoP+5/E+o
+        rOFzMuWmmRuFAgXaupjih8+mgM7Y8wr91erT6SYIUG6figYoernOagavQDE5X1Jzs7wTWixQAwWKTTN2
+        DKb2WHjs4A/onxLn0k1IDRMsoOgkRTm5gBvKvp5SvuG0sq4A9KHVfy3LN8/uaFANDluBA7V2QXnq2Bt0
+        W+uldBOQ4lSgHCV2ubAEoHZ0Sg/X47UAKBZYo6d7eiihGhy2ggTaXD+H6vu7KXbhDQG66PgbdEf7c+km
+        FBXQZPtpX0spXwuel6rlHQEoVvw9kbidjg+uUw0OW4ECTTxMDT1NFDv/ugBdfuZN+nzXC+kmmE6IbaIZ
+        99nlwlCq/bSuxc8QCkBvLf89urfyI3Rg20o6vyP6dhRAO2JTVUB+1VxbQo0d1RQ795oAhb4x+FKmETDM
+        NtEY6ZYrtHAdbo/bz7wygEL/vuyPqWfT3Mg3zIAAtDNRQq1rJ6qQfGntQ9yOzqfY2VcvD6B4HOYuwPaT
+        +g3QOyuuo5q2+2m4v0o1OUzJphlNs6l9Xf6bZrSsmUjNdbMZ6PcvE6AYf1rTkEj9fnrbBui/lf8+YRqw
+        f/NTqslhKshtbaDmxKzRgWrjPjGTjUU7ipSHnudoU25BCDcVbqK06+B/4zuvb3YboLeUXU23L/mDyDdu
+        hAC0v21+gB2jLEABEqAAU6LCAWqbmpoY52O8tmdehfPJ5AaDs2eH7PoBFcDHqtsANSqGN7ix19/OjYto
+        Y3yaCsivVKAAg1QGo1QTFUnEMnxESxBQcQ7cVLhRcMOMeh2Ampy9ksdlWv38XbEC3R3Q5o1QBtChl5MR
+        qRnnQTBe3kzLAyqOBRxJsUodo8lEq3tORHmxAg1qN04oE+grulGAjPSLaMFgXitjhLIwFuWlfXXMHU2A
+        KRGJOpyoxM2CSBwVNJeRlYBJqCbKcYwLFDNGUb8SgQXfwz0rqKsu/x2tIT1Ck8YBCFIvDJFUyuYAEP4t
+        3/HfUm2sYqwBK50nFs6F49OiF9HI5zNlBKYBmTyHOVZSKpeVa+B/o26Z1zXlkzLXL+fj+vFvfOcCXdf2
+        NTo8sFo1OiydZ6BHe9dQd/1MFZBfZQDd/r0Ro2AYAKaMzyKUMcaqYC0ZwALG3Bz8b4FilwOQJMjUi8VK
+        CpfUjJuBz2kfrwl1u0CXNN5Nu3orVKPDUsGBauPQsQRjETnoFI22cbKRiTpJnUpZA93LDQXhxkC9qchW
+        hPpcoNg4Ay8uaUaHpaIEaguRp6VBr8KxAKSdezRJpuBo1rIEQONvLtCvrPozauqYohodptAx2tw4WwXk
+        V4EDhWAuoKRS6igpEQCQsk35bOnViyQF8zm0+jSgn634I1rT+hXV5LC1pelRFZBfFQSoLZOOYajpnNhG
+        y0yTx9TqRagPN4hdB6QBhYpljdFlA9TIGJ2WEhkuOjVa+XwEeDZMKBtQvLx0Zij6l397mx8L5IlLaEAh
+        6TRZEYqOTC7t5VhSgXLdGtD5iVsj7+lCQxueCuS5aGhAU50lYzI6Kmyy156sH2lAtV4uNC9+y/gCGp85
+        8lMfyXVFWPmH1fM/MzXHjokqdFa4c2SnW0SqDE2CrCcpAHXbatxMxQx018bF1BkvUSH5UXNsBiUOnkgt
+        Q5m19/t0/aLhzF+HyEtoP2GyAzTIzpAttMtp2QD1cd3FDHRfVwV11+U/Fm2OlVLiwFEG+n8CdPb+V+lD
+        FUfo54IEiijEUCIVNfxfGF6I6IRwo6C9toGiTg3o44nbaE/fMtXkMHVwUyX1NMxSIflRc6yEEnsPUOzc
+        DwTo3OHX6BPVp+iq6QF2VtBOpnWGkmPPXMebXoQoBUQbqgZ0cf1dRbFNXGBAa6dRfd9Gip1+UYA+ceR1
+        +ue68/QLpQEBRRTC3Ayg3H4WEih6z27a1YAub/p8USy6PrJ1tSxF0SD5EYA29HY4QC8ECJSjU3qdFlAY
+        XYjhii3Ui56tXa8GtFgmFo731VBf61wVkh+FAtQ1Fu1podpPI8kM6FmPAvSupR+gtW1fVQ0OWyf7a2Vt
+        kQbJl9ZNocbuOoqf/B8BuvjED+mz679JvzQjoBkcLfUBqFY2UDFQ1G0v+3SBFsvkPHR6MEED7Qt0SH5U
+        M4maWst5LHpJgGL1/Nf7X6Rfnok2TjPKpzCPa8OEQgHKQpQiO5goLWag0I6OhTokPxrPQGX8i7SbHP9e
+        iUBXnH2LJg99l37l4fEAlGWn/GIHitV/eS+4XvsNao4/TIlDZwTommffofmHXqNfm8U9U80gv3KBIv0h
+        DWplCyFJu8mHAsUOdF/X0sBW/yUOnhSg0JJTP0r/pd98JAN8GyjGoAHdLF4lD9k5Sosd6P7uZfR0Iv/5
+        XChx4Fhqe5uKUz+m3567l3463wl6M3SwgcJYfKeVL5SQdrGQ7EoCWrd7L9UmX/xFx+imlSfy7xgBqPso
+        C+0n0rBWvlAyY2EXKN5vqW75kmpuFDq8pYq2BjBbBNUN9Y9sQsVA0TH6+9hZ+vXZeaZdeerBAG2ghZ7D
+        hczsFLIBhDSvtaEQdkUpll+IOLK1Wn4xXwPkV3WDvRR75rsCdOW5t+i2lkv0m+5Gjn4lMzXJIYORSbmI
+        Xu2YfCVZQak3G1CsWNjdu1Q1OGwFCRQT9PGT3xagq869TXd1PE+/M4/N10zzIokSjkb3iQc+AypMR9sW
+        FFicB+fDeXH+jDqVNhSaUfOPRfGzk9Cx3jXU3xrA9B+rsStO8SPnBWjV+bdlr4WrH2cjYJRvmZTnRIkr
+        mIyV8QKWjzHyk5JRH55/Ir3bs0L4r6RaltTDf9eAFtMu19h/fufGxSogv7KBYiw6a9+rdH35sZEo8yVn
+        It6XkpEEwBo8VyYLZKRX/oyxp9wcVnkNKH5YAKsWNIPDFoBiKYoGyK8aO1amxqJrL/6E5h5+nW5Ydjp5
+        p/uUay6iVV7YdYxXhXNwykS0ZW1r+TvT6cmojz8DsnacBhS7opSsvVleWor6pz8wQb+7s0wF5FdNLYup
+        bt8hAbruElEl93Q/vPJsull+JakOUDhSEHX4N8zOaOMUAQzKASyOkahlSACldbZMdAO0G5mjAYW+Xv1x
+        2rxpXuTrc/FKxD4ei2qA/Kq56Qmq27NfgBp9tPqcY5ofIVJgrhMpMBtA7Nf81OMtoYyJWBOZaX9Ppli0
+        k2pEJ6XBhL5YeSNVtdxXFNvcHNq8UgXkV80N86hu9550oFVn2Dw2y4vU1Mfma8ZCKbAMCoDkHEmN2gYn
+        /4bzoyyOwzlGA2mkwYTwE5RfWvHRolhbFBjQdVOpbntfOtDl3CnSjNGEtOiaLx0TD0anhHTKUWY/lFbF
+        MAHR7zJQDSaEXVGwZVxfzxOR7wEYFNCWtROpfmCzgEQbiqHLjUuP6sZoQjS6UYq06rXHaoQbwLS3gJbR
+        ViaF7wFfO0c2aTCNsByluWNq5FEaGFBWfX+PAEUvF2uLPlh2WDdGEwC4bRs++zXdKAWWj5ebRQHrZ4gD
+        aSCNMHxZ1HBn5Gt0A0u5sRKqHxoQoBiHlu5+mT6wcFg3RhOMRUTZhgMCUrFW3o8AF+fJgGpSr8ebRgNp
+        hHYUW6/29ixQjQ5LgQG1ernVF96hiQP/S9c+yaZpxmgS0zmS0gxnIYq08n6VumGctO6nDg2kq6i3uikE
+        0Jzncgu93ATp103rUgd/56WDpAF0NV6AYv95M7GQO1COIrdjFCRQZAG01doQCdGbbULBSAPoarwAxc9m
+        JYZPC1A8D705l+ehAAqAttlBAoXGgoq073emyNZ4AdrQ0zjykx8MNOcVCzBS2lHL7KCBQoAqqdeBCpmO
+        GNI/bjCUNcdpAF2NG6C9eB46snp++TNvyg/yvM83UDYPRtrRUwigMgGhDJNS4vrtCX4DVgPoarwAtVcs
+        LD39Y7pu4UG6arrPmRgInZM0oGzsWG1brpKhjBKlrlAGmUMD6Go8AsUyzt+Ys5t+aopi4lhCJLhAESFa
+        2XyF83rZFg7CNWkAXUUJFJsh7+2qUAH5lQxZnv0hreYx6KMHXqVfzXWhtQtU2jSci7/XyucjGca4nTC+
+        gbRZJUgD6CpKoEE+4DYPt9HDnbT9pdxfhXCBoj2D6fheK5+PcKOkweO68B2EOl24GkBXUQPF7tYaIO+a
+        SC01k3nIcirVw83rZaUMoCxpRwsA1J05AjyT3uXxHEcwnvgIWC6nAXQVJVC8IzqU7wtL+KmPpgUUP3Kh
+        cEDx2e+jLi9KS7dchzzdUerBNaEDpQF0FSVQ7Mq5Ld9Vf/L2WRnFj14UoAuPvUG3tFyiXyzlu9s1xotg
+        HiLCjhyTCoOMUkSfnU5x02CIkq0OfK8BdBUl0ENbVuW/59+6ydTYWUPxE/8tQPN+JR/Gmbe9bKBepuY8
+        i+tw208vWUAD6CpKoAd7KmlTnvvmYqVCw5Y2ip36jgCdN/wafXL1abqqJNehhmI2hKgNavgiNw3fIPZN
+        g/rGygAaQFdRAg3idULZ1qa/h8egLwnQQHYSw2yRpF0LqERQjmncFcClnZ/P7aUnrQF0FSXQXZ1l1Fbz
+        kArKq9ydxALbGs4dH0JBtaM4hxudXvY90gAaYV3RHUuujfTXlnZ2YMiS3xarLlC8jv/znG5zmiWy5Q4p
+        BCi3rUG0oy5Qr+lcA2mEFQv3r7op0hULQeyx4AINbHtVrR0F5CDa0QygHtItpIE0wnbleMdlX1+lanah
+        hWm/7eufVCH5kbu9ajBA2VwAzWhH+bMsiOb0iGEH4EJ+07AGVCvnSgMJ4XUIvLQ0tLUsstXzJ7at4zHo
+        PBWSHwW7ATIbDbPR+ZGhixOhtvA3gEDUyviRU7EoeQ71/EmhXJBAEZ3T1vwdHR1Yq5odhooPKEBytKGd
+        dNtOLwIgRLRE8ChRi+9lUiFAoF+o/DBVNt8T6asQwz0raXPjIyokP1KBjhUhtlAWEAEDUWcb7Vt8LI6X
+        8yCCAZgjGOnbpGZEp3vT5Av0gaq/pO7uOZH+Dlpg26u6QPFTWYiS0aDCVEQJjJUB/miplY0X2DmCNoBN
+        epb6+Hx2mXyAYoH17Np/oUMD1ZG+Trj36QrqqpuhQvKjDKDm5yYlKtBxYUknxlIqIi1ImvEQysoxfD77
+        e1s4BsfKjeEFvFMmH6D3rvgIrWq5VzU5TBXsVyHsn5sEtLGiS0ByGYAx+yZoZmYTMoG0vQCOG4XhSJ0A
+        jHo9APYEtJ/+H/6K/XEzLA+sAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="treeButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFQAAACBCAYAAABemJ1dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAC7VJREFUeF7tnW2MFVcZx/mg0WhSGxsVo202qFSlJUBdK1LKtgWCklVoA9LS4la2
+        EAAACxABrSO9dQAAC7VJREFUeF7tnW2MFVcZx/mg0WhSGxsVo202qFSlJUBdK1LKtgWCklVoA9LS4la2
         oUC7RQr2xaAYUEs10khtavpCKgbRRElpG5pmG2gtaolkTSCCH7attCmpkiBavvDlyn/Ncz3z3P/MnJk5
         b9vsh19I/nvvzDn/Oc85z3mZy7hWqzWGQ6iYEkOvHJ3y3V3bNuJf9vfUoGIq9G27Z/u4hZ9ugZ4Ny/ax
         z6QGFVMALVLMBOff2H2KfS41qJgC25//XZ9pKHj1rTe62GdTgoopsOaxH2zVhu7+0+AC9tmUoGIKoM/U
@@ -183,7 +282,7 @@
   <data name="exportButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAApdJREFUeF7tmrFqFFEUhlcRDEYxKKidJgFtBGOnQhqxSooUSWNhXsFCUwmCKUSx
+        EAAACxABrSO9dQAAApdJREFUeF7tmrFqFFEUhlcRDEYxKKidJgFtBGOnQhqxSooUSWNhXsFCUwmCKUSx
         MRD0FVQweQILLdQilaaRJDZCIsTCBIVA1PU7c08SdCfL7O6cuZPd88FXZHbm/odD9t47O1NxHMdxHMdx
         HMfJQrVa7cJhvI0PDL2L43hKo+NCIYdxEtexSH7jLJ7TUoqH8D6cx5j8xDEtqTgIPYYLUkEJkP+GYS2t
         GAh8nkSXh2/Yo+XZQtAA/pHUkjGpJdpCkMzGZWRRS7SFoDchL5UVfIz/L195+BDfYT1Oapl2EFJv8hvR
@@ -200,7 +299,7 @@
   <data name="landButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAJwAAACUCAYAAABm60AgAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAA9lJREFUeF7t3clOFFEUh/H7FNI8jSuGpnFpdGFMjK9g3CkOCI4r9QFEVGaabvZi
+        wAAADsABataJCQAAA9lJREFUeF7t3clOFFEUh/H7FNI8jSuGpnFpdGFMjK9g3CkOCI4r9QFEVGaabvZi
         nCDBWWlmfJPjPQXtQu4CwuVPmXyLXwicru7Nl3urqishbO/8tub8vJ152AkcO4KDFMFBiuAgRXCQCq8X
         3tizkZHkEMgtvH333p6PjiaHQG7hw8dFe/HyZXII5BYWl5bs1dhYcgjkFpaXP9n4+ERyCOQWPn/5YhOT
         k8khkFv4+u27TU1NJ4dAbuH7j582PT2THAK5hV8rLZuZrSeHQG6h1Vq1en0uOQRyC63VNavPERw0wtr6
@@ -222,7 +321,7 @@
   <data name="waterButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACoAAAApCAYAAABDV7v1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAABZdJREFUWEeNl+liHDcMg/eR29hOnGdL2xxt0uOltvgwgsKROTP7A9mVxAMEKa1z
+        wAAADsABataJCQAABZdJREFUWEeNl+liHDcMg/eR29hOnGdL2xxt0uOltvgwgsKROTP7A9mVxAMEKa1z
         u73+c799+DHw/X57P/BR+x//vd9evt1vv/4ufFrw2/329GXze/1bPn9t9nx/h73Or4DPq/z5js/T5y0f
         MR2rcPM/awA7/jEIj+QEraAo9glsYiL//LWQlX8XN3hWkdg+rXaKgy9n5Mm+Nxx0qFQd+LRiqmwlGkJW
         u/iFAB1BoXoWUBjn7lZzDiyEbCLCTPjy59bK2raoFuMKq/efSMumJuAMgiQBzyJDXEP7gLhg57cg3UEo
